Refactor searchCourses method to return CourseSearchDto and update specifications for DistinctCourse